k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: app
---
apiVersion: v1
kind: Namespace
metadata:
  name: selenium
