k8s/20-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels: {app: backend}
  template:
    metadata:
      labels: {app: backend}
    spec:
      containers:
        - name: backend
          image: meetbot/backend:dev1
          imagePullPolicy: IfNotPresent
          ports: 
            - containerPort: 8000
          command: ["sh","-c","alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 8000"]
