k8s/30-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: worker
  namespace: app
spec: 
  replicas: 1
  selector: 
    matchLabels: {app: worker}
  template: 
    metadata: 
      labels: {app: worker}
    spec:
      containers:
        - name: worker
          image:  meetbot/worker:1.0
          imagePullPolicy: IfNotPresent
          command: ["celery","-A","worker.celery_app","worker","--loglevel=info"]
