k8s/selenium-node-chrome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-node-chrome
  namespace: selenium
  labels:
    app: selenium-node-chrome
spec:
  selector:
    matchLabels:
      app: selenium-node-chrome
  template:
    metadata:
      labels:
        app: selenium-node-chrome
    spec:
      terminationGracePeriodSeconds: 3600
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
      containers:
      - name: selenium-node-chrome
        image: selenium/node-chrome:4.23
        ports:
          - containerPort: 5555
        volumeMounts:
          - mountPath: /dev/shm
            name: dshm
        lifecycle:
          preStop:
            exec:
              command:
                - /bin/sh
                - -c
                - |
                  curl --request POST http://localhost:5555/se/grid/node/drain ;
                  tail --pid=$(pgrep -f '[n]ode --bind-host false --config /opt/selenium/config.toml') -f /dev/null ;
                  sleep 30s
        resources:
          limits:
            memory: "512Mi"
            cpu: "250m"
          requests:
            memory: "512Mi"
            cpu: "250m"
