k8s/22-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ing
  namespace: app
spec:
  rules:
    - host: api.meetbot      # put 127.0.0.1 api.meetbot.local in /etc/hosts
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port: {number: 80}
